# Quadruped-Robot

./: .gitignore  CMakeLists.txt  result_visual.py
include/: arm_schedule.hpp  gait_schedule.hpp  mpc_solver.hpp
include/common/: types.hpp
robot/galileo_mini/: robot.urdf
robot/galileo_mini_x5_description/: galileo_mini_x5.urdf
robot/galileo_mini_x5_description/meshes/: FL_foot_link.STL  FL_knee_link.STL  FR_foot_link.STL  FR_knee_link.STL  HL_foot_link.STL  HL_knee_link.STL  HR_foot_link.STL  HR_knee_link.STL
src/: main.cpp  mpc_solver.cpp
